--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,7 +45,12 @@
               <a class="nav-link" aria-current="page" href="#">首頁</a>
             </li>
             <li class="nav-item me-3">
-              <a class="nav-link" href="#">寵物訓練課程介紹</a>
+              <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#">寵物訓練課程介紹</a>
+              <ul class="dropdown-menu ms-xl-5 border-1" >
+                <li><a class="dropdown-item " href="#">私人訓練師</a></li>
+                <li><a class="dropdown-item" href="#">團體課程資訊</a></li>
+              </ul>
+
             </li>
             <li class="nav-item me-3">
               <a class="nav-link" href="#">寵物商城</a>
