add showGroup.jsp to show image and show relation groupCourse

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -60,7 +60,7 @@
               >
               <ul class="dropdown-menu ms-xl-5 border-1">
                 <li><a class="dropdown-item" href="#">私人訓練師</a></li>
-                <li><a class="dropdown-item" href="select_page.jsp">團體課程資訊</a></li>
+                <li><a class="dropdown-item" href="classtype/select_page.jsp">團體課程資訊</a></li>
               </ul>
             </li>
             <li class="nav-item me-3">
