--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="webutil/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="webutil/css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/animate.min.css" />
-    <link rel="icon" type="image/x-icon" href="icons/happy_1.png" />
+    <link rel="stylesheet" href="webutil/css/animate.min.css" />
+    <link rel="icon" type="image/x-icon" href="webutil/icons/happy_1.png" />
     <title>寵物訓練師 | 首頁</title>
   </head>
 
@@ -24,7 +24,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="/index.html">
           <img
-            src="images/logo.png"
+            src="webutil/images/logo.png"
             width="200"
             class="d-inline-block align-text-top animated bounce"
           />
@@ -74,13 +74,13 @@
             </li>
             <li class="nav-item me-3">
               <a class="nav-link" href="#">
-                <img src="icons/faq.svg" style="width: 30px" />
+                <img src="webutil/icons/faq.svg" style="width: 30px" />
                 <p class="d-xl-none d-inline text-center mx-3">FAQ</p>
               </a>
             </li>
             <li class="nav-item me-3">
               <a class="nav-link" href="#"
-                ><img src="icons/service.svg" style="width: 30px" />
+                ><img src="webutil/icons/service.svg" style="width: 30px" />
                 <p class="d-xl-none d-inline text-center mx-3">聯絡客服</p>
               </a>
             </li>
@@ -92,13 +92,13 @@
             </li> -->
             <li class="nav-item me-3">
               <a class="nav-link" href="#">
-                <img src="icons/user2.svg" style="width: 30px" />
+                <img src="webutil/icons/user2.svg" style="width: 30px" />
                 <p class="d-xl-none d-inline text-center mx-3">會員中心</p>
               </a>
             </li>
             <li class="nav-item me-3">
               <a class="nav-link" href="#">
-                <img src="icons/cart.svg" style="width: 30px" />
+                <img src="webutil/icons/cart.svg" style="width: 30px" />
                 <p class="d-xl-none d-inline text-center mx-3">購物車</p>
               </a>
             </li>
@@ -139,7 +139,7 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/Carousel01.jpg" class="d-block w-100" />
+              <img src="webutil/images/Carousel01.jpg" class="d-block w-100" />
               <div class="carousel-caption d-none d-md-block">
                 <h5>專業訓練師與忠實夥伴的訓練時刻</h5>
                 <p>
@@ -148,14 +148,14 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="images/Carousel02.jpg" class="d-block w-100" />
+              <img src="webutil/images/Carousel02.jpg" class="d-block w-100" />
               <div class="carousel-caption d-none d-md-block">
                 <h5>快樂時光：狗與主人的無價時刻</h5>
                 <p>這一刻不僅是一種簡單的娛樂，更是一個深刻的情感交流。</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="images/Carousel03.jpg" class="d-block w-100" />
+              <img src="webutil/images/Carousel03.jpg" class="d-block w-100" />
               <div class="carousel-caption d-none d-md-block">
                 <h5>愛與紀律：餵食時間的教育時刻</h5>
                 <p>這不僅是一個簡單的餵食動作，也是一個教育和訓練的好機會。</p>
@@ -195,7 +195,7 @@
           </h2>
           <div class="row mt-5">
             <div class="offset-xl-2 col-xl-4 col-12 animated fadeInUp">
-              <img src="images/Carousel06.jpg" class="w-100" />
+              <img src="webutil/images/Carousel06.jpg" class="w-100" />
             </div>
             <div class="col-xl-6 col-12">
               <div class="m-5">
@@ -239,7 +239,7 @@
               </div>
             </div>
             <div class="col-xl-4 col-12 animated fadeInUp">
-              <img src="images/Carousel08.jpg" class="w-100" />
+              <img src="webutil/images/Carousel08.jpg" class="w-100" />
             </div>
           </div>
         </div>
@@ -252,7 +252,7 @@
       <div class="container py-5">
         <div class="row g-5">
           <div class="col-lg-4 col-12 text-center">
-            <img src="images/logo.png" class="w-sm-100 w-50" />
+            <img src="webutil/images/logo.png" class="w-sm-100 w-50" />
             <a href="#" class="text-decoration-none">
               <h1 class="h3 mytextcolor">Woof</h1>
             </a>
@@ -260,13 +260,13 @@
           <div class="col-lg-4 col-12 border-dark-subtle">
             <h4 class="mytextcolor mb-4 text-center">Address</h4>
             <p>
-              <img src="icons/house.svg" /> 320桃園市中壢區復興路46號8樓804室
+              <img src="webutil/icons/house.svg" /> 320桃園市中壢區復興路46號8樓804室
               CHA103
             </p>
-            <p><img src="icons/telephone.svg" /> 03 425 1108</p>
+            <p><img src="webutil/icons/telephone.svg" /> 03 425 1108</p>
 
             <a href="https://www.tibame.com/goodjob"
-              ><img src="icons/link.svg" alt="" width="30px" /> 緯育</a
+              ><img src="webutil/icons/link.svg" alt="" width="30px" /> 緯育</a
             >
           </div>
           <div class="col-lg-4 col-12 text-center">
@@ -294,22 +294,22 @@
         <div class="row text-center">
           <div class="col-1">
             <a href="" class="d-none d-sm-block">
-              <img src="icons/facebook.svg" width="30px" />
+              <img src="webutil/icons/facebook.svg" width="30px" />
             </a>
           </div>
           <div class="col-1">
             <a href="" class="d-none d-sm-block">
-              <img src="icons/instagram.svg" width="30px" />
+              <img src="webutil/icons/instagram.svg" width="30px" />
             </a>
           </div>
           <div class="col-1">
             <a href="" class="d-none d-sm-block">
-              <img src="icons/line.svg" width="30px" />
+              <img src="webutil/icons/line.svg" width="30px" />
             </a>
           </div>
           <div class="col-1">
             <a href="" class="d-none d-sm-block">
-              <img src="icons/messenger.svg" width="30px" />
+              <img src="webutil/icons/messenger.svg" width="30px" />
             </a>
           </div>
           <div class="col-8">
@@ -319,8 +319,8 @@
       </div>
     </footer>
 
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="webutil/js/bootstrap.bundle.min.js"></script>
+    <script src="webutil/js/jquery-3.7.1.min.js"></script>
     <script>
       var tooltipTriggerList = [].slice.call(
         document.querySelectorAll('[data-bs-toggle="tooltip"]')
