add schedule to fetch

--- a/src/main/webapp/backend/index.html
+++ b/src/main/webapp/backend/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/ae360af17e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="backcss/bootstrap.min.css" />
-    <link rel="stylesheet" href="backcss/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/style.css">
     <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@900&display=swap" rel="stylesheet" /> -->
     <title>後台</title>
 </head>
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         <div class="row">
             <aside id="sidebar">
-                <img src="backimages/logo.png" width="220" />
+                <img src="images/logo.png" width="220" />
                 <div class="line">
                 </div>
                 <ul class="sidebar-nav">
@@ -43,13 +43,13 @@
                         </a>
                         <ul id="class" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
                             <li class="sidebar-item">
-                                <a href="#" class="sidebar-link2">團體檔期管理</a>
+                                <a href="course/classContent.jsp" class="sidebar-link2">團體內容管理</a>
                             </li>
                             <li class="sidebar-item">
                                 <a href="#" class="sidebar-link2">訓練師課程查詢</a>
                             </li>
                             <li class="sidebar-item">
-                                <a href="#" class="sidebar-link2">團體報名管理</a>
+                                <a href="course/schedule.jsp" class="sidebar-link2">團體報名管理</a>
                             </li>
                             <li class="sidebar-item">
                                 <a href="#" class="sidebar-link2">私人預約管理</a>
@@ -119,7 +119,7 @@
     </div>
     </div>
 
-    <script src="backjs/bootstrap.bundle.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
