--- a/src/main/webapp/backend/index.html
+++ b/src/main/webapp/backend/index.html
@@ -67,7 +67,7 @@
                         </a>
                         <ul id="shop" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
                             <li class="sidebar-item">
-                                <a href="#" class="sidebar-link2">促銷管理</a>
+                                <a href="promotionactivity/PA.jsp" class="sidebar-link2">促銷管理</a>
                             </li>
                             <li class="sidebar-item">
                                 <a href="#" class="sidebar-link2">商品管理</a>
