backend skill schedule and classtype CRUD complete

--- a/src/main/webapp/backend/index.html
+++ b/src/main/webapp/backend/index.html
@@ -85,7 +85,7 @@
                         </a>
                         <ul id="staff" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
                             <li class="sidebar-item">
-                                <a href="#" class="sidebar-link2">訓練師專區</a>
+                                <a href="employee/trainer.jsp" class="sidebar-link2">訓練師專區</a>
                             </li>
                             <li class="sidebar-item">
                                 <a href="#" class="sidebar-link2">員工管理</a>
