--- a/src/main/webapp/backend/index.html
+++ b/src/main/webapp/backend/index.html
@@ -103,7 +103,7 @@
                                 <a href="#" class="sidebar-link2">最新消息管理</a>
                             </li>
                             <li class="sidebar-item">
-                                <a href="#" class="sidebar-link2">FAQ管理</a>
+                                <a href="faq/faqfirst.jsp" class="sidebar-link2">FAQ管理</a>
                             </li>
                             <li class="sidebar-item">
                                 <a href="#" class="sidebar-link2">客服管理</a>
