--- a/src/main/webapp/backend/index.html
+++ b/src/main/webapp/backend/index.html
@@ -46,7 +46,7 @@
                                 <a href="course/classContent.jsp" class="sidebar-link2">團體內容管理</a>
                             </li>
                             <li class="sidebar-item">
-                                <a href="#" class="sidebar-link2">訓練師課程查詢</a>
+                                <a href="course/getClassDate.jsp" class="sidebar-link2">訓練師課程查詢</a>
                             </li>
                             <li class="sidebar-item">
                                 <a href="course/schedule.jsp" class="sidebar-link2">團體報名管理</a>
