--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,7 +22,7 @@
       class="navbar navbar-expand-xl sticky-top py-3 mb-3 bg-white shadow -75"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">
+        <a class="navbar-brand" href="index.html">
           <img
             src="webutil/images/logo.png"
             width="200"
@@ -47,17 +47,12 @@
         >
           <ul class="navbar-nav animated slideInUp">
             <li class="nav-item me-3">
-              <a class="nav-link" aria-current="page" href="#">首頁</a>
-            </li>
-            <li class="nav-item me-3">
-              <a
-                class="nav-link dropdown-toggle"
+              <a class="nav-link dropdown-toggle"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
-                href="#"
-                >寵物訓練課程介紹</a
-              >
+                href="#">
+                寵物訓練課程介紹</a>
               <ul class="dropdown-menu ms-xl-5 border-1">
                 <li><a class="dropdown-item" href="#">私人訓練師</a></li>
                 <li><a class="dropdown-item" href="backend/course/classContent.jsp">團體課程資訊</a></li>
@@ -84,12 +79,6 @@
                 <p class="d-xl-none d-inline text-center mx-3">聯絡客服</p>
               </a>
             </li>
-            <!-- <li class="nav-item me-3">
-              <a class="nav-link" href="#">登入</a>
-            </li>
-            <li class="nav-item me-3">
-              <a class="nav-link" href="#">登出</a>
-            </li> -->
             <li class="nav-item me-3">
               <a class="nav-link" href="#">
                 <img src="webutil/icons/user2.svg" style="width: 30px" />
