add frontend Page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="webutil/css/animate.min.css" />
     <link rel="icon" type="image/x-icon" href="webutil/icons/happy_1.png" />
-    <title>寵物訓練師 | 首頁</title>
+    <title>寵毛導師 Woof | 首頁</title>
   </head>
 
   <body>
@@ -97,12 +97,12 @@
     </div>
 
     <!-- 輪播 -->
-    <header>
-      <div class="container animated animated headShake">
+    <header id="header" class="header">
+      <div >
         <div
           id="carouselExampleCaptions"
-          class="carousel slide offset-lg-2 col-12 col-lg-8"
-          data-bs-ride="carousel q"
+          class="carousel slide"
+          data-bs-ride="carousel"
         >
           <div class="carousel-indicators">
             <button
