edit backend page

--- a/src/main/webapp/backend/index.html
+++ b/src/main/webapp/backend/index.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         <div class="row">
 
-            <div class="col-md-3 bg-color ">
+            <div class="col-2 bg-color vh-100" style="">
                 <aside id="sidebar">
                     <img src="images/logo.png" width="220" />
                     <ul class="sidebar-nav">
@@ -115,17 +115,22 @@
                 </aside>
             </div>
 
-            <div class="col-md-9 bg-light p-1"
-                style="box-shadow: 0 6px 2px -2px rgba(126, 126, 126, 0.2); height: 80px; position: sticky; top: 0;">
-                <!-- <h1>這是頂部</h1> -->
-                <div style="position: absolute; bottom: 0; right: 0; text-align: right; padding: 5px; ">
-                    <img src="images/happy.png" width="30">
-                    <span style="color: rgb(80, 80, 80);">超级管理員</span>
-                    <a href="#" class="btn" style="background-color: #a5a5a5; font-family: 'Noto Sans TC', sans-serif;
+            <div class="col-md-9  p-1 hw-100">
+                <div class="col-12 bg-light" style="height: 100px; box-shadow: 0 6px 2px -2px rgba(126, 126, 126, 0.2);">
+                    <!-- <h1>這是頂部</h1> -->
+                    <div style=" text-align: right; position: relative; top: 30% ;" class="me-3">
+                        <img src="images/happy.png" width="30">
+                        <span style="color: rgb(80, 80, 80);">超级管理員</span>
+                        <a href="#" class="btn" style="background-color: #a5a5a5; font-family: 'Noto Sans TC', sans-serif;
                     font-weight: 700; border: 1px solid rgb(80, 80, 80);">登出</a>
+                    </div>
                 </div>
+<!--                -->
+                <div class="col-12 h-auto" >
+
             </div>
-            
+
+
 
 
         </div>
