--- a/src/main/webapp/backend/index.html
+++ b/src/main/webapp/backend/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css">
     <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@900&display=swap" rel="stylesheet" /> -->
-    <title>後台</title>
+    <title>寵毛導師後台</title>
 </head>
 
 <body>
