registration Page complete and add Trainer skill query SQL

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -297,7 +297,7 @@
             </a>
           </div>
           <div class="col-1">
-            <a href="" class="d-none d-sm-block">
+            <a href="backend/index.html" class="d-none d-sm-block">
               <img src="webutil/icons/messenger.svg" width="30px" />
             </a>
           </div>
