--- a/src/main/webapp/backend/index.html
+++ b/src/main/webapp/backend/index.html
@@ -130,7 +130,7 @@
 
                 <!-- 這邊是讓大家放上自己要秀出來的內容 -->
 
-                <div class="col-md">
+                <div class="col-md text-center">
                     <div class="position-relative"></div>
                     <img src="images/pexels-anna-shvets-4587992.jpg" alt="寵毛導師後台首頁" width="250">
                     <div class="position-absolute top-50 start-50 translate-middle text-center"></div>
