--- a/src/main/webapp/backend/index.html
+++ b/src/main/webapp/backend/index.html
@@ -17,7 +17,7 @@
 		<div class="row">
 			<div class="col-md-3 bg-color p-0 ">
 				<aside id="sidebar" class="position-sticky top-0">
-					<img src="webutil/images/logo.png" width="220" class="text-center">
+					<img src="images/logo.png" width="220" class="text-center">
 					<ul class="sidebar-nav p-0">
 						<li class="sidebar-item"><a href="#"
 							class="sidebar-link collapsed" data-bs-toggle="collapse"
