--- a/src/main/webapp/backend/index.html
+++ b/src/main/webapp/backend/index.html
@@ -8,15 +8,15 @@
     <script src="https://kit.fontawesome.com/ae360af17e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css">
-
-    <title>寵毛導師後台</title>
+    <link rel="icon" type="image/x-icon" href="../webutil/icons/happy_1.png" />
+    <title>寵毛導師 Woof | 後台</title>
 </head>
 
 <body>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-3 bg-color p-0 ">
-            <aside id="sidebar" class="position-sticky top-0">
+        <div class="col-md-3 bg-color p-0 min-vh-100 position-sticky top-0">
+            <aside id="sidebar" class="">
                 <img src="images/logo.png" width="220" class="text-center">
                 <ul class="sidebar-nav p-0">
                     <li class="sidebar-item">
@@ -45,7 +45,7 @@
                                 <a href="course/classContent.jsp" class="sidebar-link2">團體內容管理</a>
                             </li>
                             <li class="sidebar-item">
-                                <a href="#" class="sidebar-link2">訓練師課程查詢</a>
+                                <a href="course/trainerSchedule.jsp" class="sidebar-link2">訓練師課程查詢</a>
                             </li>
                             <li class="sidebar-item">
                                 <a href="course/schedule.jsp" class="sidebar-link2">團體報名管理</a>
@@ -115,8 +115,8 @@
         </div>
 
         <div class="col-md p-0 ">
-            <div class="col-md-12 bg-light"
-                 style="height: 100px; box-shadow: 0 6px 2px -2px rgba(126, 126, 126, 0.2); height: 80px; position: sticky; top: 0;">
+            <div class="col-md-12 bg-light mx-auto"
+                 style="height: 100px; box-shadow: 0 6px 2px -2px rgba(126, 126, 126, 0.2); height: 80px; position: sticky; top: 0;z-index:100;">
                 <!-- <h1>這是頂部</h1> -->
                 <div style="position: absolute; bottom: 0; right: 0; text-align: right; padding: 5px; ">
                     <img src="images/happy.png" width="30">
@@ -130,7 +130,7 @@
 
             <!-- 這邊是讓大家放上自己要秀出來的內容 -->
 
-            <div class="col-md">
+            <div class="col-md-6">
                 <div class="position-relative"></div>
                 <img src="images/pexels-anna-shvets-4587992.jpg" alt="寵毛導師後台首頁" width="250">
                 <div class="position-absolute top-50 start-50 translate-middle text-center"></div>
