--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -297,11 +297,16 @@
             </a>
           </div>
           <div class="col-1">
-            <a href="backend/index.html" class="d-none d-sm-block">
+            <a href="#" class="d-none d-sm-block">
               <img src="webutil/icons/messenger.svg" width="30px" />
             </a>
           </div>
-          <div class="col-8">
+          <div class="col-1">
+            <a href="backend/index.html" class="d-none d-sm-block">
+              <img src="webutil/icons/backend.svg" width="30px" />
+            </a>
+          </div>
+          <div class="col-7">
             <p>© 2023 All Right Reserved</p>
           </div>
         </div>
