--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -80,7 +80,7 @@
               </a>
             </li>
             <li class="nav-item me-3">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="frontend/member/login/login.jsp">
                 <img src="webutil/icons/user2.svg" style="width: 30px" />
                 <p class="d-xl-none d-inline text-center mx-3">會員中心</p>
               </a>
