--- a/src/main/webapp/backend/index.html
+++ b/src/main/webapp/backend/index.html
@@ -27,10 +27,10 @@
                         </a>
                         <ul id="mem" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
                             <li class="sidebar-item">
-                                <a href="#" class="sidebar-link2">會員管理</a>
+                                <a href="member/list_all_member.jsp" class="sidebar-link2">會員管理</a>
                             </li>
                             <li class="sidebar-item">
-                                <a href="#" class="sidebar-link2">會員查詢</a>
+                                <a href="member/selectmember.jsp" class="sidebar-link2">會員查詢</a>
                             </li>
                         </ul>
                     </li>
