update backend index

--- a/src/main/webapp/backend/index.html
+++ b/src/main/webapp/backend/index.html
@@ -69,7 +69,7 @@
                                 <a href="promotionactivity/PA.jsp" class="sidebar-link2">促銷管理</a>
                             </li>
                             <li class="sidebar-item">
-                                <a href="#" class="sidebar-link2">商品管理</a>
+                                <a id="productPage" class="sidebar-link2">商品管理</a>
                             </li>
                             <li class="sidebar-item">
                                 <a href="#" class="sidebar-link2 ">商品訂單管理</a>
@@ -150,6 +150,7 @@
 </div>
 
 <script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/path.js"></script>
 </body>
 
 </html>
