--- a/src/main/resources/static/productDetail.html
+++ b/src/main/resources/static/productDetail.html
@@ -39,7 +39,8 @@
                 <button id="increase-quantity" type="button">+</button>
             </div>
             <!-- 加入購物車按鈕 -->
-            <button id="add-to-cart" type="button" class="btn btn-primary">加入購物車</button>
+            <!-- 加入購物車按鈕 -->
+				<button id="add-to-cart" type="button" class="btn btn-primary add-to-cart" data-id="" data-name="" data-price="">加入購物車</button>
         </div>
     </div>
 </div>
