--- a/src/main/webapp/backend/index.html
+++ b/src/main/webapp/backend/index.html
@@ -45,7 +45,10 @@
                                 <a href="course/classContent.jsp" class="sidebar-link2">團體內容管理</a>
                             </li>
                             <li class="sidebar-item">
-                                <a href="course/trainerSchedule.jsp" class="sidebar-link2">訓練師課程查詢</a>
+                                <a href="course/trainerSchedule.jsp" class="sidebar-link2">團體課程課表查詢</a>
+                            </li>
+                            <li class="sidebar-item">
+                                <a href="course/trainerSchedule.jsp" class="sidebar-link2">私人訓練師課表查詢</a>
                             </li>
                             <li class="sidebar-item">
                                 <a href="course/schedule.jsp" class="sidebar-link2">團體報名管理</a>
