--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -54,7 +54,7 @@
                 href="#">
                 寵物訓練課程介紹</a>
               <ul class="dropdown-menu ms-xl-5 border-1">
-                <li><a class="dropdown-item" href="#">私人訓練師</a></li>
+                <li><a class="dropdown-item" href="frontend/privatetrainer/privateTrainer.jsp">私人訓練師</a></li>
                 <li><a class="dropdown-item" href="frontend/group/groupSchedule.jsp">團體課程資訊</a></li>
               </ul>
             </li>
