--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -86,7 +86,7 @@
               </a>
             </li>
             <li class="nav-item me-3">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="frontend/cartlist/cart.jsp">
                 <img src="webutil/icons/cart.svg" style="width: 30px" />
                 <p class="d-xl-none d-inline text-center mx-3">購物車</p>
               </a>
