新增 後臺修改商品功能 將thymeleaf修改成純html css js

--- a/src/main/resources/static/addModal.html
+++ b/src/main/resources/static/addModal.html
@@ -1,5 +1,5 @@
 <!-- 新增商品模態框 -->
-<div th:fragment="addProductModal">
+<!--<div th:fragment="addProductModal">-->
     <div class="modal fade" id="addProductModal" tabindex="-1" role="dialog" aria-labelledby="addProductModalLabel"
          aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -56,4 +56,4 @@
             </div>
         </div>
     </div>
-</div>
+<!--</div>-->
