--- a/src/main/resources/static/shopHome.html
+++ b/src/main/resources/static/shopHome.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <base href="http://localhost:8081/woof/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>商品瀏覽</title>
+    <title>寵毛導師 Woof | 商品首頁</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/shopHmoe.css" rel="stylesheet">
+    <link href="/woof/css/shopHome.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
@@ -17,7 +17,6 @@
             <!-- 側邊欄開始 -->
             <div class="list-group" id="category-list">
                 <a href="#" class="list-group-item list-group-item-action active" data-category="all">全部</a>
-                <!-- 其他類別將從伺服器動態加載 -->
             </div>
             <!-- 側邊欄結束 -->
         </div>
@@ -30,8 +29,8 @@
 </div>
 
 
-<script src="js/shopHome.js"></script>
-<script src="js/cart.js"></script>
+<script src="/woof/js/shopHome.js"></script>
+<script src="/woof/js/cart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
