在前後台首頁加入商城首頁與商品管理頁面

--- a/src/main/webapp/backend/index.html
+++ b/src/main/webapp/backend/index.html
@@ -72,7 +72,7 @@
                                 <a href="promotionactivity/PA.jsp" class="sidebar-link2">促銷管理</a>
                             </li>
                             <li class="sidebar-item">
-                                <a id="productPage" class="sidebar-link2">商品管理</a>
+                                <a href="/woof/productPage.html" class="sidebar-link2">商品管理</a>
                             </li>
                             <li class="sidebar-item">
                                 <a href="#" class="sidebar-link2 ">商品訂單管理</a>
