--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -59,7 +59,7 @@
               </ul>
             </li>
             <li class="nav-item me-3">
-              <a class="nav-link" href="#">寵物商城</a>
+              <a class="nav-link" href="/woof/shopHome.html">寵物商城</a>
             </li>
             <!-- <li class="nav-item me-3">
               <a class="nav-link" href="#">會員中心</a>
