--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -302,7 +302,7 @@
             </a>
           </div>
           <div class="col-1">
-            <a href="backend/index.html" class="d-none d-sm-block">
+            <a href="backend/index.jsp" class="d-none d-sm-block">
               <img src="webutil/icons/backend.svg" width="30px" />
             </a>
           </div>
