昱堯檔案大整合

--- a/src/main/resources/static/addModal.html
+++ b/src/main/resources/static/addModal.html
@@ -36,7 +36,7 @@
                         <!-- 商品敘述 -->
                         <div class="form-group">
                             <label for="productDescription">商品敘述</label>
-                            <textarea class="form-control" id="productDescription" rows="3" maxlength="300"></textarea>
+                            <textarea class="form-control" id="productDescription" rows="3" maxlength="300" required></textarea>
                             <small id="productDescriptionHelp" class="form-text text-muted">最多可輸入300個字</small>
                         </div>
                         <!-- 上下架狀態 -->
