--- a/src/main/resources/static/editModal.html
+++ b/src/main/resources/static/editModal.html
@@ -38,7 +38,7 @@
                         <!-- 商品敘述 -->
                         <div class="form-group">
                             <label for="editProductDescription">商品敘述</label>
-                            <textarea class="form-control" id="editProductDescription" name="editProdDesc" rows="3" maxlength="300"></textarea>
+                            <textarea class="form-control" id="editProductDescription" name="editProdDesc" rows="3" maxlength="300" required></textarea>
                             <small id="editProductDescriptionHelp" class="form-text text-muted">最多可輸入300個字</small>
                         </div>
                         <!-- 上下架狀態 -->
