--- a/src/main/resources/static/productPage.html
+++ b/src/main/resources/static/productPage.html
@@ -51,6 +51,8 @@
     </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="sweetalert2.all.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -73,9 +75,6 @@
 </script>
 
 <script src="/woof/js/productPage.js"></script>
-<script src="/woof/js/pagination.js"></script>
-<script src="/woof/js/productStatus.js"></script>
-<script src="/woof/js/selectAllCheckbox.js"></script>
 <script src="/woof/js/modal.js"></script>
 <script src="/woof/js/editModal.js"></script>
 
