--- a/src/main/resources/static/shopHome.html
+++ b/src/main/resources/static/shopHome.html
@@ -8,26 +8,91 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/woof/css/shopHome.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
 
 <div class="container mt-4">
+    <!-- 促銷商品區塊 -->
     <div class="row">
-        <div class="col-md-3">
-            <!-- 側邊欄開始 -->
-            <div class="list-group" id="category-list">
-                <a href="#" class="list-group-item list-group-item-action active" data-category="all">全部</a>
+        <div class="col-md-2"></div>
+        <div class="col-md-8 gray-background">
+            <h2>促銷商品</h2>
+            <div id="promotionCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner" id="promotion-products-row"></div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#promotionCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#promotionCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                </button>
             </div>
-            <!-- 側邊欄結束 -->
         </div>
-        <div class="col-md-9">
-            <div class="row" id="products-row">
-                <!-- 商品卡片將被動態插入這裡 -->
+        <div class="col-md-2"></div>
+    </div>
+</div>
+
+<div class="container mt-4">
+    <!-- 商品類別和一般商品區塊 -->
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 gray-background">
+            <div class="d-flex justify-content-between align-items-center">
+                <div>
+                    <h2 style="display: inline-block; vertical-align: middle;">商品類別</h2>
+                    <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#categoryCollapse" aria-expanded="true" aria-controls="categoryCollapse" id="toggleCategoryButton" style="vertical-align: middle;">
+                        <i class="fas fa-chevron-up" id="arrowIcon"></i>
+                    </button>
+                </div>
+                <div class="search-box">
+                    <input type="text" class="form-control" id="searchInput" placeholder="搜尋商品...">
+                </div>
+            </div>
+
+            <!-- 可摺疊的商品類別區塊 -->
+            <div class="collapse show" id="categoryCollapse">
+                <div class="row mt-4" id="category-row">
+                    <!-- 類別圖標和名稱動態插入 -->
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+
+    <div class="row">
+        <!-- 一般商品區塊 -->
+        <div class="col-md-2"></div>
+        <div class="col-md-8 gray-background">
+            <h2>一般商品</h2>
+            <!-- 一般商品 -->
+            <div class="row" id="products-row"></div>
+            <!-- 分頁控制 -->
+            <nav aria-label="Page navigation">
+                <ul class="pagination" id="pagination"></ul>
+            </nav>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+</div>
+
+
+<!-- 商品詳情模態框 -->
+<div class="modal fade" id="productDetailModal" tabindex="-1" aria-labelledby="productDetailModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="productDetailModalLabel"></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <iframe id="productDetailIframe" src="" style="width: 100%; height: 600px;" frameborder="0"></iframe>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">關閉</button>
             </div>
         </div>
     </div>
 </div>
-
 
 <script src="/woof/js/shopHome.js"></script>
 <script src="/woof/js/cart.js"></script>
