--- a/src/main/resources/static/shopHome.html
+++ b/src/main/resources/static/shopHome.html
@@ -2,7 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <base href="http://localhost:8081/woof/">
+    <script>
+    let currentUrl = window.location.href;
+    let pathArray = currentUrl.split("/");
+    let protocol = pathArray[0];
+    let host = pathArray[2];
+    let basePath = protocol + "//" + host;
+    if (currentUrl.includes("/woof/")) {
+        basePath += "/woof/";
+    }
+    document.write(`<base href="${basePath}">`);
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>寵毛導師 Woof | 商品首頁</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -11,7 +21,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-
+<!-- <iframe src="/woof/Header.jsp" style="width:100%; border:none;"></iframe> -->
 <div class="container mt-4">
     <!-- 促銷商品區塊 -->
     <div class="row">
@@ -93,7 +103,8 @@
         </div>
     </div>
 </div>
-
+<!-- <iframe src="/woof/Footer.jsp" style="width:100%; border:none;"></iframe> -->
+<!-- <iframe src="/woof/meta.jsp" style="width:100%; border:none;"></iframe> -->
 <script src="/woof/js/shopHome.js"></script>
 <script src="/woof/js/cart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
