修改商城css與購物車跳轉

--- a/src/main/resources/static/shopHome.html
+++ b/src/main/resources/static/shopHome.html
@@ -28,7 +28,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link rel="stylesheet"
 	href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@900&display=swap" />
-<link rel="icon" type="image/x-icon" href="/woof/webutil/icons/happy_1.png" />
+<link rel="icon" type="image/x-icon"
+	href="/woof/webutil/icons/happy_1.png" />
 </head>
 <body>
 	<div
@@ -64,12 +65,14 @@
 							<p class="d-xl-none d-inline text-center mx-3">會員中心</p>
 					</a></li>
 
-					<li class="nav-item me-3"><a class="nav-link"
-						href="/woof/frontend/cartlist/cart.jsp"> <img
-							src="/woof/webutil/icons/cart-plus-solid.svg" style="width: 30px" />
-							<span id="cart-count">0</span>
+					<li class="nav-item me-3">
+						<button class="nav-link" id="cart-icon">
+							<img
+								src="/woof/webutil/icons/cart-plus-solid.svg"
+								style="width: 30px" /> <span id="cart-count">0</span>
 							<p class="d-xl-none d-inline text-center mx-3">購物車</p>
-					</a></li>
+						</button>
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -173,8 +176,8 @@
 		<div class="container py-5">
 			<div class="row g-5">
 				<div class="col-lg-4 col-12 text-center">
-					<img src="/woof/webutil/images/logo.png" class="w-sm-100 w-50" /> <a
-						href="#" class="text-decoration-none">
+					<img src="/woof/webutil/images/logo.png" class="w-sm-100 w-50" />
+					<a href="#" class="text-decoration-none">
 						<h1 class="h3 mytextcolor">Woof</h1>
 					</a>
 				</div>
