--- a/src/main/resources/static/productDetail.html
+++ b/src/main/resources/static/productDetail.html
@@ -69,6 +69,7 @@
     </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/woof/js/productDetail.js"></script>
 <script src="/woof/js/cart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
