--- a/src/main/resources/static/shopHome.html
+++ b/src/main/resources/static/shopHome.html
@@ -22,6 +22,7 @@
 	rel="stylesheet">
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <link rel="stylesheet" href="/woof/webutil/css/animate.min.css" />
 <link rel="stylesheet" href="/woof/webutil/css/style.css" />
 <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -59,20 +60,28 @@
 					</a></li>
 
 
+					<li class="nav-item me-3" id="logoutSection" style="display: none;">
+						<a class="nav-link" href="/woof/login?action=memberlogout"> <img
+							src="/woof/webutil/icons/logout.svg" style="width: 30px" />
+							<p class="d-xl-none d-inline text-center mx-3">登出</p>
+					</a>
+					</li>
+
 					<li class="nav-item me-3"><a class="nav-link"
 						href="/woof/frontend/member/login/membercenter.jsp"> <img
-							src="/woof/webutil/icons/user2.svg" style="width: 30px" />
+							id="memberImage" src="/woof/webutil/icons/user2.svg"
+							style="width: 30px; border-radius: 50%" />
 							<p class="d-xl-none d-inline text-center mx-3">會員中心</p>
 					</a></li>
 
 					<li class="nav-item me-3">
 						<button class="nav-link" id="cart-icon">
-							<img
-								src="/woof/webutil/icons/cart-plus-solid.svg"
+							<img src="/woof/webutil/icons/cart-plus-solid.svg"
 								style="width: 30px" /> <span id="cart-count">0</span>
 							<p class="d-xl-none d-inline text-center mx-3">購物車</p>
 						</button>
 					</li>
+
 				</ul>
 			</div>
 		</div>
@@ -171,6 +180,42 @@
 		</div>
 	</div>
 
+	<!-- 購物車模態框 -->
+	<div class="modal fade" id="cartModal" tabindex="-1"
+		aria-labelledby="cartModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="cartModalLabel">購物車清單</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal"
+						aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<!-- 購物車清單以表格形式顯示 -->
+					<table class="table text-center">
+						<thead>
+							<tr>
+								<th class="col-2">商品名稱</th>
+								<th class="col-2">照片</th>
+								<th class="col-2">數量</th>
+								<th class="col-2">價格</th>
+							</tr>
+						</thead>
+						<tbody id="cart-items-list">
+							<!-- 購物車商品項目將在這裡動態添加 -->
+						</tbody>
+					</table>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary"
+						data-bs-dismiss="modal">繼續購物</button>
+					<a href="/woof/frontend/cartlist/checkout.jsp"
+						class="btn btn-primary">結帳</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<!-- 頁尾 -->
 	<footer class="animated fadeInUp">
 		<div class="container py-5">
@@ -217,6 +262,7 @@
 			</div>
 		</div>
 
+		
 		<script src="/woof/js/shopHome.js"></script>
 		<script src="/woof/js/cart.js"></script>
 		<script src="/woof/webutil/js/bootstrap.bundle.min.js"></script>
