更新購物車js

--- a/src/main/resources/static/shopHome.html
+++ b/src/main/resources/static/shopHome.html
@@ -77,7 +77,8 @@
 					<li class="nav-item me-3">
 						<button class="nav-link" id="cart-icon">
 							<img src="/woof/webutil/icons/cart-plus-solid.svg"
-								style="width: 30px" /> <span id="cart-count">0</span>
+								style="width: 30px" /> 
+								<span id="cart-count">0</span>
 							<p class="d-xl-none d-inline text-center mx-3">購物車</p>
 						</button>
 					</li>
